--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -9,7 +9,8 @@ jobs:
       uses: actions/checkout@v3
     - name: build
       run: |
-        docker build . -t username/px4-ros-gazebo:latest
+        docker build . -t ${{ secrets.DOCKER_HUB_USERNAME }}/px4-ros-gazebo:latest
     - name: publish
       run: |
-        docker push username/px4-ros-gazebo:latest
+        docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_TOKEN }}
+        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/px4-ros-gazebo:latest
